--- a/src/App.css
+++ b/src/App.css
@@ -2,33 +2,12 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+    margin: 3px;
+    border: none;
+    background: none;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
 
@@ -38,13 +17,50 @@
   border-radius: 10px;
   width: 100px;
   padding: 5px;
+  cursor: pointer;
 }
 .city.inactive {
   color: gray;
   border-color: gray;
 }
+.city.start {
+  border-color: green;
+}
+.city.end {
+  border-color: yellow;
+}
 
 .map {
    height: 100vh;
    width: 100%;
+}
+
+.paths {
+  width: 300px;
+  position: fixed;
+  left: 3px;
+  top: 3px;
+  z-index: 1;
+  background: white;
+  padding: 20px;
+  border: solid 2px black;
+  border-radius: 10px;
+}
+
+.path {
+  margin: 30px 0;
+  cursor: pointer;
+}
+
+.path.selected {
+  font-weight: bold;
+}
+
+.path .cities {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.path .cities div {
+  flex-shrink: 0;
 }
